<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rlParent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/rlSearch"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true">

        <EditText
            android:id="@+id/etSearch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/btnDoneSearch"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_toLeftOf="@+id/btnDoneSearch"
...
            android:background="?android:attr/selectableItemBackground"
            android:text="DONE" />

    </RelativeLayout>

    <com.ambassador.ambassadorsdk.internal.views.DividedRecyclerView
        android:id="@+id/rvContacts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/llSendView"
        android:layout_below="@+id/rlSearch"
        android:layout_centerHorizontal="true" />

    <View
        android:id="@+id/vListDim"
        android:layout_width="wrap_content"
...
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/etShareMessage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_weight="8"
...
                android:maxHeight="120dp"
                android:selectAllOnFocus="true"
                android:text="Check out this company! www.mbsy.co/jkas4"
                android:textSize="14sp" />

            <ImageButton
                android:id="@+id/btnEdit"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:layout_weight="0"
                android:background="?android:attr/selectableItemBackground"
                android:padding="15dp"
                android:src="@drawable/pencil_edit" />

            <Button
                android:id="@+id/btnDone"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:layout_weight="0"
...
                android:textSize="10sp"
                android:visibility="gone" />

        </LinearLayout>

        <RelativeLayout
            android:id="@+id/rlSend"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="8dp">

            <com.ambassador.ambassadorsdk.internal.views.CrossfadedTextView
                android:id="@+id/tvSendContacts"
...

        </RelativeLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/tvNoContacts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/rvContacts"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
...
