...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    android:fillViewport="true">

    <LinearLayout
        android:id="@+id/llParent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context=".MainActivity">

        <TextView
            android:id="@+id/tvWelcomeTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="8dp"
            android:gravity="center_horizontal"
            android:text="Spread the word!"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/tvWelcomeDesc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:gravity="center_horizontal"
            android:text="Refer a friend to get a reward"
...
            android:layout_marginRight="10dp"
            android:layout_marginTop="20dp"
            android:paddingLeft="10dp"
            android:paddingRight="4dp">

            <com.ambassador.ambassadorsdk.internal.views.ShakableEditText
                android:id="@+id/etShortURL"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:clickable="true"
                android:editable="false"
                android:text="" />

            <ImageButton
                android:id="@+id/btnCopy"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="end|center_vertical"
                android:background="?android:attr/selectableItemBackground"
                android:padding="8dp"
                android:scaleType="fitXY"
                android:src="@drawable/copy_paste_icon" />

        </FrameLayout>

        <com.ambassador.ambassadorsdk.internal.views.StaticGridView
            android:id="@+id/gvSocialGrid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="30dp"
...
