<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/dialog_contact_name"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:paddingLeft="30dp"
    android:paddingRight="30dp">

...
            android:textColor="@android:color/darker_gray"
            android:textSize="20sp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp" />

        <com.ambassador.ambassadorsdk.internal.views.ShakableEditText
            android:id="@+id/etFirstName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/explanation"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="5dp"
            android:backgroundTint="@color/twitter_blue"
...
            android:textColorHint="@android:color/darker_gray"
            android:textCursorDrawable="@null"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp" />

        <com.ambassador.ambassadorsdk.internal.views.ShakableEditText
            android:id="@+id/etLastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/etFirstName"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="20dp"
            android:backgroundTint="@color/twitter_blue"
...
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp">

            <Button
                android:id="@+id/btnCancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:background="?android:attr/selectableItemBackground"
                android:text="Cancel"
                android:textColor="@color/twitter_blue"
                android:layout_weight="0.5"
                android:textSize="18sp" />

            <Button
                android:id="@+id/btnContinue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:background="?android:attr/selectableItemBackground"
                android:text="Continue"
                android:textColor="@color/twitter_blue"
...
