<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/dialog_contact_info"
    android:layout_width="320dp"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
...
            android:layout_marginBottom="3dp"
            android:gravity="center"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvNumberOrEmail"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvName"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:textSize="14sp" />

    </RelativeLayout>

    <ImageView
        android:id="@+id/ivExit"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:src="@drawable/exit_button" />
...
